<resources>
    <string name="app_name">CRUD APP</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="coffee">coffee</string>
    <string name="reading_newspaper">Reading Newspaper</string>
    <string name="married">Married</string>
    <string name="single">Single</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="employee_mailid">Employee Mail Id</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search_all_record">Search All Record</string>
    <string name="search">Search</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_salary">Employee Salary</string>
</resources>